Внесёт подработки по главной станице

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,16 @@
   src: url("../fonts/rubik/rubik-700.woff2") format("woff2");
 }
 
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
@@ -27,51 +37,20 @@ body {
   line-height: 30px;
   color: #444444;
   background-color: #ffffff;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
-body a {
+a {
   text-decoration: none;
   color: #000000;
 }
 
-.user-popover__item a {
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: #ffffff;
+button {
+  cursor: pointer;
 }
-
-.slider__info-wrap dd {
-  color: #000000;
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 30px;
-}
-
-.slider__info-wrap dt {
-  font-family: "Rubik", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 30px;
-}
-
-.advantage__content-item h3 {
-  color: #000000;
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 50px;
-  line-height: 50px;
-}
-
-.logo {}
-
-.user-list {}
-
-.user-popover {}
-
-.nav {}
 
 .visually-hidden:not(:focus),
 input[type="checkbox"].visually-hidden,
@@ -88,7 +67,22 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
 }
 
-.dropdown {}
+.list-reset {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+.logo {
+  display: flex;
+}
 
 .button {
   color: #000000;
@@ -101,7 +95,27 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
 }
 
-.crumbs
+.user-popover__link {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.advantage__content-item h3 {
+  color: #000000;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+}
+
+.user-popover {}
+
+.dropdown {}
+
+.crumbs {}
 
 .filter {}
 
@@ -125,15 +139,42 @@ input[type="radio"].visually-hidden {
 
 .pagination {}
 
-.header {}
+.header {
+  padding: 12px 0;
+}
 
-.header__logo {}
+.header__container {}
 
-.header__form {}
+.header__wrap-container {
+  max-width: 1040px;
+  display: flex;
+  margin: 0 auto;
+  flex-direction: column;
+}
+
+.header__logo {
+  align-self: start;
+  margin-bottom: 30px;
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.header__form {
+  display: flex;
+  width: 100%;
+  max-width: 517px;
+  margin-right: 26px;
+  align-items: center;
+}
 
 .header__search-icon {}
 
 .header__search-input {
+  width: 100%;
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -149,9 +190,26 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-.header__user-list {}
+.header__user-list {
+  width: 100%;
+}
 
-.user-list__item {}
+.user-list {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0 -18px;
+  list-style: none;
+}
+
+.user-list__item {
+  display: flex;
+  padding: 0 18px;
+}
+
+.user-list__item:first-child {
+  margin-right: auto;
+}
 
 .user-list__link {}
 
@@ -162,6 +220,7 @@ input[type="radio"].visually-hidden {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  display: none;
 }
 
 .user-popover__list {}
@@ -197,11 +256,31 @@ input[type="radio"].visually-hidden {
 
 .header__nav {}
 
-.nav__list {}
+.nav {
+  display: flex;
+}
 
-.nav__item {}
+.nav__list {
+  width: calc(100% + 44px);
+  display: flex;
+  margin: 0 -22px;
+  padding: 0;
+  list-style: none;
+  align-items: center;
+}
+
+.nav__item {
+  display: flex;
+  padding: 0 22px;
+}
+
+.nav__item:first-child {
+  margin-right: auto;
+}
 
 .nav__link {
+  display: flex;
+  align-items: center;
   color: #000000;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -209,13 +288,23 @@ input[type="radio"].visually-hidden {
   line-height: 21px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+  margin-right: 7px;
 }
 
-.nav__toggle {}
+.nav__toggle {
+  background: transparent;
+  border-radius: 50%;
+  padding: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .nav__dropdown {}
 
-.dropdown__list {}
+.dropdown__list {
+  display: none;
+}
 
 .dropdown__item {}
 
@@ -227,23 +316,76 @@ input[type="radio"].visually-hidden {
   line-height: 18px;
 }
 
-.main {}
+.main {
+  flex-grow: 1;
+}
 
-.preview {}
+.preview {
+  margin-bottom: 70px;
+}
 
 .slider {}
 
 .slider__list {}
 
-.slider__item {}
+.slider__item {
+  display: flex;
+  align-items: center;
+}
 
-.slider__img {}
+.slider__item:nth-child(1),
+.slider__item:nth-child(2) {
+  display: none;
+}
 
-.slider__toggle {}
+.slider__wrapper {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 560px;
+  height: 560px;
+  margin-right: 40px;
+}
+
+.slider__img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  object-fit: cover;
+}
+
+.slider__toggles {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  justify-content: space-between;
+  padding-left: 30px;
+}
+
+.slider__toggle {
+  width: 20px;
+  height: 60px;
+  border: none;
+  padding: 0;
+  background-color: white;
+}
 
 .slider__toggle--left {}
 
 .slider__toggle--right {}
+
+.slider__arrow--left {}
+
+.slider__arrow--right {}
+
+.slider__container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 92px;
+}
 
 .slider__title {
   color: #000000;
@@ -251,30 +393,91 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
+  margin: 0 0 30px;
 }
 
-.slider__text {}
+.slider__text {
+  margin: 0 0 50px;
+}
 
-.slider__more-button {}
+.slider__more-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
 
-.slider__info {}
+.slider__more-button {
+  width: 100%;
+  max-width: 220px;
+}
 
-.slider__info-wrap {}
+.slider__pagination-list {
+  display: flex;
+  margin: -10px;
+  flex-wrap: wrap;
+}
 
-.slider__pagination-list {}
+.slider__pagination-item {
+  display: flex;
+  padding: 10px;
+}
 
-.slider__pagination-item {}
+.slider__pagination-button {
+  padding: 0;
+  background-color: transparent;
+  border: 2px solid #000;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
 
-.slider__pagination-button {}
+.slider__pagination-button--current {
+  background-color: #000;
+}
 
-.category {}
+.slider__info {
+  margin: -10px;
+  display: flex;
+}
 
-.category__list {}
+.slider__info-wrap {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.slider__info-wrap dt {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.slider__info-wrap dd {
+  order: -1;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 30px;
+  color: #000000;
+  margin: 0 0 12px;
+}
+
+.category {
+  margin-bottom: 70px;
+}
+
+.category__list {
+  display: flex;
+  margin: -20px;
+  flex-wrap: wrap;
+  width: calc(100% + 40px);
+}
 
 .category__item {
-  background-color: #ffe17f;
-  width: 160px;
-  height: 160px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  width: 200px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -282,19 +485,84 @@ input[type="radio"].visually-hidden {
   color: #000000;
 }
 
-.category__link {}
+.category__item-wrap {
+  background-color: #ffe17f;
+  width: 160px;
+  height: 160px;
+  text-align: center;
+  margin-bottom: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-.advantage {}
+.category__item-wrap--bottom {
+  align-items: end;
+}
 
-.advantage__buttons-list {}
+.category__link {
+  display: flex;
+  flex-direction: column;
+}
 
-.advantage__button-item {}
+.advantage {
+  margin-bottom: 70px;
+}
 
-.advantage__button {}
+.advantage__wrapper {
+  display: flex;
+  padding: 65px 63px 65px 0;
+  align-items: center;
+  margin-bottom: 142px;
+}
 
-.advantage__content-list {}
+.advantage__buttons-list {
+  list-style: none;
+  margin: -18px 0;
+  padding: 0;
+}
+
+.advantage__button-item {
+  padding: 18px 0;
+  text-align: center;
+}
+
+.advantage__button {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  margin-right: 243px;
+  padding: 10px 4px;
+  border: none;
+  background-color: white;
+}
+
+.advantage__content-list {
+  list-style: none;
+  margin: 0;
+  padding-left: 24px;
+}
 
 .advantage__content-item {}
+
+.advantage__content-item p {
+  padding: 0;
+  margin: 0;
+}
+
+.advantage__content-item h3 {
+  margin-bottom: 34px;
+  margin-top: 0;
+}
+
+.advantage__content-item:nth-child(2),
+.advantage__content-item:nth-child(3) {
+  display: none;
+}
 
 .advantage__delivery {
   color: #000000;
@@ -305,17 +573,43 @@ input[type="radio"].visually-hidden {
   text-align: center;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border: none;
+  padding: 0;
 }
 
 .advantage__icon-car {
   background-color: #ffe17f;
+  padding: 36px 40px;
+}
+
+.advantage__delivery-text {
+  padding: 0;
 }
 
 .advantage__icon-info {
   background-color:rgba(220, 220, 220, 0.5);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 42px;
 }
 
-.about {}
+.about-contacts__wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 70px;
+}
+
+.about {
+  width: 520px;
+}
 
 .about__title {
   color: #000000;
@@ -323,11 +617,19 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
+  margin-bottom: 48px;
 }
 
-.about__text {}
+.about__text {
+  margin-bottom: 30px;
+  margin-right: 23px;
+}
 
-.about__list {}
+.about__list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 11px;
+}
 
 .about__item {
   color: #000000;
@@ -335,11 +637,15 @@ input[type="radio"].visually-hidden {
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
+  padding-bottom: 19px;
 }
 
-.about__link {}
+.about__link {
+}
 
-.contacts {}
+.contacts {
+  width: 532px;
+}
 
 .contacts__title {
   color: #000000;
@@ -347,11 +653,16 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
+  margin-bottom: 48px;
 }
 
-.contacts__text {}
+.contacts__text {
+  margin: 0 34px 30px 0;
+}
 
-.contacts__address-wrap {}
+.contacts__address-wrap {
+  margin-bottom: 30px;
+}
 
 .contacts__sub-title {
   color: #444444;
@@ -359,6 +670,7 @@ input[type="radio"].visually-hidden {
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
+  margin-bottom: 15px;
 }
 
 .contacts__address {
@@ -374,25 +686,67 @@ input[type="radio"].visually-hidden {
   text-decoration: underline;
 }
 
+.contacts__time-wrap {
+  margin-bottom: 30px;
+}
+
 .contacts__time {}
 
 .article {
   background-color: #f0f0f0;
+  padding: 64px 0 56px;
+}
+
+.article__wrapper {
+  display: flex;
+  margin-bottom: 144px;
+  justify-content: space-between;
 }
 
 .article__title {
+  width: 100%;
+  max-width: 360px;
   color: #000000;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 50px;
   line-height: 50px;
+  margin: 0;
 }
 
-.article__text {}
+.article__text {
+  align-self: self-end;
+  max-width: 552px;
+  width: 100%;
+  margin: 0;
+}
 
-.article__form {}
+.article__form-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-.article__wrap {}
+.article__form {
+  display: flex;
+  width: 100%;
+  max-width: 810px;
+}
+
+.article__wrap {
+  display: flex;
+  width: 100%;
+}
+
+.article__input {
+  width: 100%;
+  background-color: #f0f0f0;
+  height: 57px;
+  border: none;
+  border-bottom: 3px solid #c4c4c4;
+  padding: 11px 16px 14px;
+
+}
 
 .article__submit {
   color: #000000;
@@ -400,19 +754,40 @@ input[type="radio"].visually-hidden {
   font-weight: 800;
   font-size: 18px;
   line-height: 21px;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+  height: 57px;
+  margin-left: 0;
+  max-width: 253px;
+  border: 3px solid #c4c4c4;
+  padding: 18px 39px;
 }
 
-.article__safe {}
+.article__safe {
+  margin: 0;
+}
 
 .footer {
   background-color: #444444;
+  padding: 62px 0 62px;
 }
 
-.footer__logo {}
+.footer__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__logo {
+  margin-bottom: 35px;
+  align-self: start;
+}
+
+.footer__list-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 48px;
+}
 
 .footer__address {
   color: #ffffff;
@@ -421,11 +796,20 @@ input[type="radio"].visually-hidden {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+  width: 100%;
+  max-width: 240px;
 }
 
-.footer__list {}
+.footer__list {
+  display: flex;
+  margin: 0 -18px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
-.footer__item {}
+.footer__item {
+  padding: 0 18px;
+}
 
 .footer__link {
   color: #ffffff;
@@ -446,19 +830,64 @@ input[type="radio"].visually-hidden {
   font-size: 16px;
   line-height: 20px;
   text-decoration: underline;
+  margin-left: 70px;
 }
 
-.footer__socials {}
+.footer__socials-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-.footer__social {}
+.footer__poloska {
+  position: relative;
+  width: 100%;
+  max-width: 240px;
+  height: 7px;
+}
+
+.footer__poloska::before {
+  content: "";
+  position: absolute;
+  width: 80px;
+  height: 7px;
+  top: 0;
+  left: 0;
+  background-color: #ffc500;
+}
+
+.footer__socials {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: -8px;
+}
+
+.footer__social {
+  padding: 8px;
+}
 
 .footer__social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.footer__academy-wrap {
+  display: flex;
+  width: 100%;
+  max-width: 240px;
+  justify-content: end;
 }
 
 .footer__academy {
   color: #ffe17f;
-  text-decoration: underline;
+  /* margin-left: auto; */
 }
 
 .main__wrapper {}
